Fix subcomponent hierarchy